--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -1,73 +1,6 @@
 /* 13. Pseudo Classes */
 
-html {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-  font-size: 62.5%;
-}
-
-body {
-  color: var(--text-color);
-  font-family: var(--font-family-base);
-  font-size: var(--font-size-medium);
-  line-height: var(--line-height-base);
-  font-weight: var(--font-weight-regular);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--font-family-title);
-  font-weight: var(--font-weight-bold);
-}
-
-a[href] {
-  color: var(--text-color);
-  text-decoration: none;
-}
-
-a[href]:visited {
-  font-style: italic;
-}
-
-a[href]:hover {
-  text-decoration: underline;
-}
-
-a[href]:active {
-  background: var(--color-light-grey);
-}
-
-.visually-hidden {
-  display: none;
-}
-
-.section-header {
-  text-align: var(--section-header-align);
-}
-
-.section-title {
-  font-family: var(--font-family-title);
-  font-size: var(--font-size-xx-large);
-  font-weight: var(--font-weight-bold);
-  margin: var(--section-title-margin);
-  color: var(--section-title-color);
-}
-
-.section-tagline {
-  font-family: var(--font-family-title);
-  color: var(--color-primary);
-  text-transform: var(--section-tagline-transform);
-  font-weight: var(--font-weight-bold);
-}
-
-.card-category {
-  color: var(--color-primary);
-}
-
+/* Root variables */
 :root {
   --color-primary: #d73953;
   --color-black: #090909;
@@ -78,7 +11,7 @@ a[href]:active {
   --text-color: var(--color-black);
 
   --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   --font-size-small: 1.2rem;
   --font-size-medium: 1.6rem;
@@ -95,7 +28,79 @@ a[href]:active {
 
   --section-header-align: center;
   --section-tagline-transform: uppercase;
-
   --section-title-margin: 0;
   --section-title-color: var(--color-black);
+}
+
+/* Global */
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+
+body {
+  color: var(--text-color);
+  font-family: var(--font-family-base);
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-regular);
+  min-height: var(--line-height-base);
+}
+
+/* Headings */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-family-title);
+  font-weight: var(--font-weight-bold);
+}
+
+/* Links */
+a:link {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+a:visited {
+  font-style: italic;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  background-color: var(--color-light-grey);
+}
+
+/* Utilities */
+.visually-hidden {
+  display: none;
+}
+
+/* Sections */
+.section-header {
+  text-align: var(--section-header-align);
+}
+
+.section-title {
+  font-family: var(--font-family-title);
+  font-size: var(--font-size-xx-large);
+  font-weight: var(--font-weight-bold);
+  margin: var(--section-title-margin);
+  color: var(--section-title-color);
+}
+
+.section-tagline {
+  color: var(--color-primary);
+  font-family: var(--font-family-title);
+  text-transform: var(--section-tagline-transform);
+  font-weight: var(--font-weight-bold);
+}
+
+/* Cards */
+.card-category {
+  color: var(--color-primary);
 }
