--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -1,1 +1,14 @@
+/* 23. Fix issues for dark theme */
+
+.footer-address {
+  color: var(--text-color);
+}
+
+.social-link {
+  display: block;
+}
+
+.social-link svg {
+  fill: var(--text-color);
+}
 
